--- a/configs/human_nerf/zju_mocap/387/single_gpu_hash.yaml
+++ b/configs/human_nerf/zju_mocap/387/single_gpu_hash.yaml
@@ -1,6 +1,6 @@
 task: 'zju_mocap'
 subject: 'p387'
-experiment: 'single_gpu_hash_2_64_2048_2^19'  ######################
+experiment: 'single_gpu_hash_2_64_2048_2^19_dir_48_16_lrate_decay_100_0.0005_l1loss_0.2_opacloss_1_test3'
 
 ##############################################
 ## Data Configuration
@@ -8,61 +8,85 @@ experiment: 'single_gpu_hash_2_64_2048_2^19'  ######################
 train:
   dataset_module: 'core.data.human_nerf.train'
   dataset: 'zju_387_train'
-  shuffle: True             # [True] ######################
-  maxiter: 100000           # [400000]
-  log_interval: 10          # [20] show log information
-  save_model_interval: 2000 # [50000] checkpoint
-  seed: 0                   # by dj
+  batch_size: 1
+  shuffle: True
+  drop_last: False
+  lr: 0.0005  
+  lr_mweight_vol_decoder: 0.00005 
+  lr_pose_decoder: 0.00005        
+  lr_non_rigid_mlp: 0.00005       
+  lrate_decay: 100
+  optimizer: 'adam'
+  ray_shoot_mode: 'patch'
+  maxiter: 400000           
+  log_interval: 10          
+  seed: 0                   
   lossweights:
     lpips: 1.0
     mse: 0.2
-    opacity: 0.0            # [0.] ######################
-    l1: 0.0                 # [0.]
-    psnr: 0.0               # [0.]
+    opacity: 1.0             
+    l1: 0.2                 
+    psnr: 0.0   
+  opacity_kick_in_iter: 10000            
 
 progress:
   dataset_module: 'core.data.human_nerf.train'
   dataset: 'zju_387_test'
-  dump_interval: 5000       # [5000]
+  batch_size: 1
+  shuffle: False
+  drop_last: False
+  dump_interval: 10000       
 
 movement:
   dataset_module: 'core.data.human_nerf.train'
   dataset: 'zju_387_test'
+  batch_size: 1
+  shuffle: False
+  drop_last: False
 
 freeview:
   dataset_module: 'core.data.human_nerf.freeview'
   dataset: 'zju_387_test'
+  batch_size: 1
+  shuffle: False
+  drop_last: False
+  frame_idx: 0
 
 tpose:
   dataset_module: 'core.data.human_nerf.tpose'
   dataset: 'zju_387_test'
+  batch_size: 1
+  shuffle: False
+  drop_last: False
 
 bgcolor: [0., 0., 0.]
-resize_img_scale: 0.5
-
 
 ##############################################
 ## EXPERIMENTS CONFIGURATIONS
-resize_img_scale: 0.5
+## Overwrite default parameters (/superhumannerf/configs/default.yaml)
+
+resize_img_scale: 0.5       # try: 0.6; [0.5] 
 
 train_keyfilter: ['rays', 'motion_bases', 'motion_weights_priors', 'cnl_bbox', 'dst_posevec_69', 'motionCLIP'] # add 'motionCLIP'
 test_keyfilter: ['rays', 'target_rgbs', 'motion_bases', 'motion_weights_priors','cnl_bbox', 'dst_posevec_69', 'motionCLIP'] # add 'motionCLIP'
 
 motionCLIP:
   encoded_feats: 'motionCLIP_token[s]_nbrs[1].pkl' # token: z/s(self); neighborhoods: #neighbors 
-  training_frames_poseDistinct: False ######################
-  training_frames_lossDistinct: False ######################
-  
+  training_frames_poseDistinct: False
+  training_frames_lossDistinct: False 
+
+sex: 'neutral'
 total_bones: 24
 bbox_offset: 0.3  
 
 resume: False
 load_net: latest
+save_all: True
 
 patch:
-  sample_subject_ratio: 0.8 # [0.8] ######################
-  N_patches: 6              # try: 10; [6] ######################
-  size: 20                  # try: 16; single_gpu [20]; adventure[32] ######################
+  sample_subject_ratio: 0.8 # [0.8] 
+  N_patches: 6              # try: 10; [6]
+  size: 20                  # try: 16; single_gpu [20]; adventure[32]
 
 network:
   ignore_pose_correction: False
@@ -70,3 +94,12 @@ network:
   apply_hash_coding: True
 
 netchunk_per_gpu: 308000 # dj: [307200=2400*128] number of pts sent through network in parallel, decrease if running out of memory
+
+
+N_samples: 128      # number of samples for each ray in coarse ray matching
+
+chunk: 32768   # 32768=1024*32, number of rays processed in parallel, decrease if running out of memory
+perturb: 1
+n_gpus: 1
+show_alpha: False  
+show_truth: False
