--- a/configs/human_nerf/zju_mocap/387/single_gpu_hash.yaml
+++ b/configs/human_nerf/zju_mocap/387/single_gpu_hash.yaml
@@ -1,6 +1,39 @@
+category: 'superhumannerf'
 task: 'zju_mocap'
 subject: 'p387'
-experiment: 'test3'
+experiment: 'single_gpu_hash_2_64_2048_2^19_dir_48_16_lrate_decay_100_0.0005_l1loss_0.2_opacloss_1_50000_N_patches_6_size_20_non_rigid_5_128_test1'
+
+##############################################3
+## Network Specs
+
+# modules
+network_module: 'core.nets.human_nerf.network'
+trainer_module: 'core.train.trainers.human_nerf.trainer'
+lr_updater_module: 'core.train.trainers.human_nerf.lr_updaters.exp_decay'
+optimizer_module: 'core.train.optimizers.human_nerf.optimizer'
+
+mweight_volume:
+  module: 'core.nets.human_nerf.mweight_vol_decoders.deconv_vol_decoder'
+  embedding_size: 256
+  volume_size: 32
+  dst_voxel_size: 0.0625
+
+non_rigid_motion_mlp:
+  kick_in_iter: 10000
+  full_band_iter: 50000
+
+pose_decoder:
+  module: 'core.nets.human_nerf.pose_decoders.mlp_delta_body_pose'
+  embedding_size: 69
+  mlp_width: 256
+  mlp_depth: 4
+  kick_in_iter: 0
+
+motionCLIP:
+  encoded_feats: 'motionCLIP_token[s]_nbrs[1].pkl' # token: z/s(self); neighborhoods: #neighbors 
+  training_frames_poseDistinct: False
+  training_frames_lossDistinct: False 
+
 
 ##############################################
 ## Data Configuration
@@ -27,7 +60,7 @@ train:
     opacity: 1.0             
     l1: 0.2                 
     psnr: 0.0   
-  opacity_kick_in_iter: 20000           
+  opacity_kick_in_iter: 50000           
   psnr_kick_in_iter: 100000            
 
 progress:
@@ -71,23 +104,6 @@ resize_img_scale: 0.5       # try: 0.6; [0.5]
 train_keyfilter: ['rays', 'motion_bases', 'motion_weights_priors', 'cnl_bbox', 'dst_posevec_69', 'motionCLIP']
 test_keyfilter: ['rays', 'target_rgbs', 'motion_bases', 'motion_weights_priors','cnl_bbox', 'dst_posevec_69', 'motionCLIP']
 
-# non-rigid motion mlp
-non_rigid_motion_mlp:
-  kick_in_iter: 10000
-  full_band_iter: 50000
-
-pose_decoder:
-  module: 'core.nets.human_nerf.pose_decoders.mlp_delta_body_pose'
-  embedding_size: 69
-  mlp_width: 256
-  mlp_depth: 4
-  kick_in_iter: 0
-
-motionCLIP:
-  encoded_feats: 'motionCLIP_token[s]_nbrs[1].pkl' # token: z/s(self); neighborhoods: #neighbors 
-  training_frames_poseDistinct: False
-  training_frames_lossDistinct: False 
-
 sex: 'neutral'
 total_bones: 24
 bbox_offset: 0.3  
@@ -108,8 +124,7 @@ network:
 
 netchunk_per_gpu: 308000 # dj: [307200=2400*128] number of pts sent through network in parallel, decrease if running out of memory
 
-
-N_samples: 128      # number of samples for each ray in coarse ray matching
+N_samples: 128      
 
 chunk: 32768   # 32768=1024*32, number of rays processed in parallel, decrease if running out of memory
 perturb: 1
