--- a/configs/human_nerf/zju_mocap/387/single_gpu_hash.yaml
+++ b/configs/human_nerf/zju_mocap/387/single_gpu_hash.yaml
@@ -1,7 +1,7 @@
 category: 'superhumannerf'
 task: 'zju_mocap'
 subject: 'p387'
-experiment: 'single_gpu_hash_2_64_2048_2^19_dir_48_16_lrate_decay_100_0.0005_l1loss_0.2_opacloss_1_50000_N_patches_6_size_20_non_rigid_5_128_test1'
+experiment: 'single_gpu_hash_2_64_2048_2^19_dir_48_16_lrate_decay_100_0.0005_l1loss_0.2_opacloss_10_100000_N_patches_6_size_20_non_rigid_5_128_test1'
 
 ##############################################3
 ## Network Specs
@@ -57,10 +57,10 @@ train:
   lossweights:
     lpips: 1.0
     mse: 0.2
-    opacity: 1.0             
+    opacity: 10.0             
     l1: 0.2                 
     psnr: 0.0   
-  opacity_kick_in_iter: 50000           
+  opacity_kick_in_iter: 100000           
   psnr_kick_in_iter: 100000            
 
 progress:
@@ -114,12 +114,12 @@ save_all: True
 
 patch:
   sample_subject_ratio: 0.8 # [0.8] 
-  N_patches: 6             
+  N_patches: 6            
   size: 20         
 
 network:
-  ignore_pose_correction: False
-  ignore_non_rigid_motions: False 
+  ignore_pose_correction: True
+  ignore_non_rigid_motions: True
   apply_hash_coding: True
 
 netchunk_per_gpu: 308000 # dj: [307200=2400*128] number of pts sent through network in parallel, decrease if running out of memory
