--- a/configs/human_nerf/zju_mocap/313/single_gpu_hash.yaml
+++ b/configs/human_nerf/zju_mocap/313/single_gpu_hash.yaml
@@ -1,8 +1,8 @@
 category: 'superhumannerf'
 task: 'zju_mocap'
-subject: '387'
-experiment: 'baseline'
-logdir: '../experiments/superhumannerf/zju_mocap/387/baseline'
+subject: '313'
+experiment: 'baseline_lpips_1.0_mse_0.2_opacity_1.0_10000'
+logdir: '../experiments/superhumannerf/zju_mocap/313/baseline_lpips_1.0_mse_0.2_opacity_1.0_10000'
 ##############################################3
 ## Network Specs
 
@@ -39,7 +39,7 @@ motionCLIP:
 
 train:
   dataset_module: 'core.data.human_nerf.train'
-  dataset: 'zju_387_train'
+  dataset: 'zju_313_train'
   batch_size: 1
   shuffle: True
   drop_last: False
@@ -47,23 +47,23 @@ train:
   lr_mweight_vol_decoder: 0.00005 
   lr_pose_decoder: 0.00005        
   lr_non_rigid_mlp: 0.00005       
-  lrate_decay: 100
+  lrate_decay: 10000
   optimizer: 'adam'
   ray_shoot_mode: 'patch'
-  maxiter: 200000        
+  maxiter: 20000
   log_interval: 10          
   lossweights:
     lpips: 1.0
     mse: 0.2
     opacity: 1.0             
-    l1: 0.2  
+    l1: 0.0
     tvloss_rgb: 0.0           
     #tvloss_sigma: 1.0           
-  opacity_kick_in_iter: 10000          
+  opacity_kick_in_iter: 10000     
 
 progress:
   dataset_module: 'core.data.human_nerf.train'
-  dataset: 'zju_387_test'
+  dataset: 'zju_313_test'
   batch_size: 1
   shuffle: False
   drop_last: False
@@ -72,14 +72,14 @@ progress:
 
 movement:
   dataset_module: 'core.data.human_nerf.train'
-  dataset: 'zju_387_test'
+  dataset: 'zju_313_test'
   batch_size: 1
   shuffle: False
   drop_last: False
 
 freeview:
   dataset_module: 'core.data.human_nerf.freeview'
-  dataset: 'zju_387_test'
+  dataset: 'zju_313_test'
   batch_size: 1
   shuffle: False
   drop_last: False
@@ -87,12 +87,12 @@ freeview:
 
 tpose:
   dataset_module: 'core.data.human_nerf.tpose'
-  dataset: 'zju_387_test'
+  dataset: 'zju_313_test'
   batch_size: 1
   shuffle: False
   drop_last: False
 
-bgcolor: [255., 255., 255.]
+bgcolor: [0., 0., 0.]
 
 ##############################################
 ## EXPERIMENTS CONFIGURATIONS
@@ -106,15 +106,15 @@ sex: 'neutral'
 total_bones: 24
 bbox_offset: 0.3  
 
-resume: True
-load_net: iter_106600
+resume: False
+load_net: latest
 save_all: True
-eval_iter: 200000
+eval_iter: 20000
 
 patch:
   sample_subject_ratio: 1.0
   N_patches: 8       
-  size: 32         
+  size: 64       
 
 network:
   ignore_pose_correction: True
