--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,8 @@ gdown
 dearpygui
 tensorboard
 scikit-image
-mmcv
 torch_efficient_distloss
+ninja
+hydra-core --upgrade
+git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch
+torch-scatter -f https://data.pyg.org/whl/torch-1.13.0+cu117.html
