--- a/tools/prepare_zju_mocap/387.yaml
+++ b/tools/prepare_zju_mocap/387.yaml
@@ -1,20 +1,17 @@
 dataset:
-  # zju_mocap_path: /data/dataset/zju_mocap
-  zju_mocap_path: ../../../ZJU-Mocap # dj
+  zju_mocap_path: ../ZJU-Mocap
   subject: '387'
   sex: 'neutral'
 
-training_view: 0
+training_view: 13
 max_frames: 540
 eval_view: 1-22  # camera index, from Camera_B2 to Camera_B23 ########
 eval_skip: 30  # choose image per 30 frame while eval #################
 
 output:
-  # dir: ../../dataset/zju_mocap
-  dir: ../../../datasets/zju_mocap    # dj
+  dir: ../datasets/zju_mocap
   name: '387'
 
 eval_output:
-  # dir: ../../dataset/zju_mocap/processed
-  dir: ../../../datasets/zju_mocap    # dj
-  name: '387_eval' ############################  
+  dir: ../datasets/zju_mocap
+  name: '387_eval'  
