--- a/configs/human_nerf/zju_mocap/377/single_gpu_hash.yaml
+++ b/configs/human_nerf/zju_mocap/377/single_gpu_hash.yaml
@@ -50,16 +50,16 @@ train:
   lrate_decay: 100
   optimizer: 'adam'
   ray_shoot_mode: 'patch'
-  maxiter: 20000         
+  maxiter: 50000         
   log_interval: 10          
   lossweights:
     lpips: 1.0
-    mse: 0.2
-    opacity: 1.0             
-    # l1: 0.2  
-    # tvloss_rgb: 0.0           
-    # tvloss_sigma: 1.0           
-  opacity_kick_in_iter: 10000         
+    rgb_loss: 0.5
+    opacity: 0.1             
+    mask_loss: 0.2
+    tvloss_rgb: 0.2           
+    tvloss_sigma: 0.2           
+  opacity_kick_in_iter: 5000         
 
 progress:
   dataset_module: 'core.data.human_nerf.train'
@@ -68,7 +68,7 @@ progress:
   shuffle: False
   drop_last: False
   progress_interval: 200     
-  #eval_interval: 20000    
+  #eval_interval: 10000    
 
 movement:
   dataset_module: 'core.data.human_nerf.train'
@@ -92,7 +92,7 @@ tpose:
   shuffle: False
   drop_last: False
 
-bgcolor: [255., 255., 255.]
+bgcolor: [0., 0., 0.]
 
 ##############################################
 ## EXPERIMENTS CONFIGURATIONS
@@ -106,10 +106,10 @@ sex: 'neutral'
 total_bones: 24
 bbox_offset: 0.3  
 
-resume: False
+resume: True
 load_net: latest
 save_all: True
-eval_iter: 20000
+eval_iter: 10000
 
 patch:
   sample_subject_ratio: 1.0
