--- a/tools/prepare_zju_mocap/393.yaml
+++ b/tools/prepare_zju_mocap/393.yaml
@@ -1,5 +1,5 @@
 dataset:
-  zju_mocap_path: ../ZJU-Mocap
+  zju_mocap_path: ../../djchen/PROJECTS/HumanNeRF/ZJU-Mocap/
   subject: '393'
   sex: 'neutral'
 
