--- a/tools/prepare_zju_mocap/377.yaml
+++ b/tools/prepare_zju_mocap/377.yaml
@@ -1,15 +1,15 @@
 dataset:
-  zju_mocap_path: ../ZJU-Mocap
+  zju_mocap_path: ../../djchen/PROJECTS/HumanNeRF/ZJU-Mocap/
   subject: '377'
   sex: 'neutral'
 
 training_view: 0
-max_frames: 540
+max_frames: -1
 eval_view: 1-22  # camera index, from Camera_B2 to Camera_B23 ########
 eval_skip: 30  # choose image per 30 frame while eval #################
 
 output:
-  dir: ../zju_mocap
+  dir: ../datasets/zju_mocap
   name: '377'
 
 eval_output:
