--- a/tools/prepare_zju_mocap/387.yaml
+++ b/tools/prepare_zju_mocap/387.yaml
@@ -1,10 +1,10 @@
 dataset:
-  zju_mocap_path: ../ZJU-Mocap
+  zju_mocap_path: ../../djchen/PROJECTS/HumanNeRF/ZJU-Mocap/
   subject: '387'
   sex: 'neutral'
 
-training_view: 13
-max_frames: 540
+training_view: 0
+max_frames: -1
 eval_view: 1-22  # camera index, from Camera_B2 to Camera_B23 ########
 eval_skip: 30  # choose image per 30 frame while eval #################
 
