--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 *.pyc
-dataset
-dataset/
-experiments
-experiments/
+outputs/
+ray_sample.jpg
+third_parties/smpl/models/basicModel_neutral_lbs_10_207_0_v1.0.0.pkl
