--- a/configs/human_nerf/zju_mocap/315/single_gpu_hash.yaml
+++ b/configs/human_nerf/zju_mocap/315/single_gpu_hash.yaml
@@ -54,11 +54,11 @@ train:
   log_interval: 10          
   lossweights:
     lpips: 1.0
-    rgb_loss: 0.2
-    opacity: 1.0             
-    # l1: 0.2  
-    # tvloss_rgb: 0.0           
-    # tvloss_sigma: 1.0           
+    rgb_loss: 0.5
+    opacity: 0.1             
+    mask_loss: 0.0
+    tvloss_rgb: 0.0         
+    tvloss_sigma: 0.0           
   opacity_kick_in_iter: 10000         
 
 progress:
@@ -68,7 +68,6 @@ progress:
   shuffle: False
   drop_last: False
   progress_interval: 200     
-  #eval_interval: 20000    
 
 movement:
   dataset_module: 'core.data.human_nerf.train'
